--- a/1_css/style.css
+++ b/1_css/style.css
@@ -50,6 +50,12 @@ bottom: 0px;
 
 }
 
+#footer p {
+
+    text-indent: 0%;
+
+}
+
 h2 {
 
     font-size: 1.2em;
@@ -135,7 +141,9 @@ li {
     align-items: center;
     justify-content: center;
     color: #FFF;
-    width: 50vw;
+    width: 100vw;
+    height: 0px;
+    padding: 20px;
 
 }
 
@@ -155,27 +163,29 @@ li {
 .menu {
 
     max-height: 0px;
-    width: 100%;
+    width: 50%;
     transition: max-height 0.3s ease-out;
     overflow: hidden;
     gap: 1em;
     font-size: 18px;
     text-align: center;
-    position: relative;
-    left: 50%;
+    position: fixed;
+    left: 25%;
+    top: 0%;
 
 }
 
 .menu li:hover {
 
-    background-color: gray;
+    background-color: rgb(43, 43, 43);
     transition: 0.3s ease;
 
 }
 
-.menu li {
+.menu li a {
 
     padding: 5px 14px;
+    display: block;
     border-bottom: white 1px solid;
 
 }
@@ -192,28 +202,66 @@ input[type=checkbox]{
 input[type=checkbox]:checked ~ .menu{
 
     max-height: 300px;
+    
 
 }
 
 .hamburger {
 
-    font-size: 24px;
-    position: absolute;
+    font-size: 28px;
+    position: fixed;
     right: 0;
     top: 0;
     padding: 25px;
 
 }
 
-.logo {
+.overlay-content {
 
+    background: rgba(0, 0, 0, 0.8);
+    overflow: hidden;
+    position: fixed;
+    height: 100vh;
+    top: 0%;
+    width: 0%;
+    transition:0.3s;
+    text-align: center;
+    z-index: 2;
+    padding-top: 150px;
+
+}
+
+.overlay-content a {
+
+    display: block;
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+    padding: 30px;
+
+}
+
+.overlay-content a:hover {
+
+    background-color: rgb(43, 43, 43);
+
+}
+
+.openBtn {
+
+position: fixed;
+top: 0%;
+right: 0%;
+
+}
+
+.closeBtn {
+
+    font-size: 40px;
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 50px;
-    margin: 10px;
-    border-radius: 50%;
-    border: black 1px solid;
+    top: 0%;
+    right: 0%;
+    padding: 0px 15px;
 
 }
 
@@ -416,19 +464,26 @@ aside {
         width: 100%;
 
     }
-    
-    .hamburger {
-    
+
+    .overlay-content{
+
         display: none;
-        user-select: none;
-    
+
+    }
+
+    .openBtn {
+
+        display: none;
+
     }
 
     .menu {
 
         max-height: 600px;
+        width: 50%;
         display: flex;
-
+        position: relative;
+        transform: translate(50%);
         justify-content: center;
         left: 0;
 
@@ -436,12 +491,6 @@ aside {
 
     #splash-text {
 
-
-    }
-
-    .logo {
-
-        display: none;
 
     }
 
